i18n/zh/docusaurus-plugin-content-docs/version-0.0.10/change-logs.md
---
sidebar_position: 999
---


# Change Logs


## 0.x

### 0.0.10

*2024년 10월 02일*

- 메뉴 추가
    - 기술지원
        - [Q&A] 메뉴 추가
        - [특수 노즐] 메뉴 추가
        - [장착정도 인증서] 메뉴 추가
- 메뉴 보완
    - 사용자인증
        - [CRM 계정생성(그외사용자)] 페이지 내 일반 사용자 계정 생성 시나리오 부문에 메뉴만 추가해둠

### 0.0.9

*2024년 9월 27일*

- 메뉴 보완
    - 교육
        - [온라인교육과정] 절차 추가
        - [오프라인교육과정]절차 추가
    - DEMO
        - [프로젝트 목록] 안내 추가
        - [프로젝트 생성]절차 추가
        - [프로젝트 상세] 절차 추가


### 0.0.8

*2024년 9월 27일*

- 메뉴 추가
    - 업무메뉴관리
- 메뉴 보완
    - 업무메뉴관리
        - [뉴스센터관리] 절차 추가
        - [교육관리] 절차 추가

### 0.0.7

*2024년 9월 26일*

- 메뉴 보완
    - 뉴스센터
        - [공지사항] 절차 추가
        - [MSDS] 절차 추가
        - [자료실] 절차 추가
    - 예방활동
        - [리트로핏] 절차 추가

### 0.0.6

*2024년 9월 25일*

- 메뉴 보완
    - 스토어
        - 자료 보완

### 0.0.5

*2024년 9월 25일*

- 메뉴 보완
    - 스토어
        - [서비스부품 출고 요청] 절차 추가
        - [서비스부품 출고 승인 & 관리] 절차 추가

### 0.0.4

*2024년 9월 24일*

- 메뉴 보완
    - VOC
        - [VOC 개요] 현황판 추가
        - [VOC 생성] 절차 추가
        - [VOC 처리] 절차 추가

### 0.0.3

*2024년 9월 24일*

- 메뉴 보완
    - 스토어
        - [주문서 수정] 절차 추가 (작성중)
        - [주문서 작성 - 일반주문(유상PO, 법인용)] 내용 추가
        - [주문서 작성 - 무상출고(본사용)] 내용 추가

### 0.0.2

*2024년 9월 23일*

- 매뉴얼 구조 변경
    - 3개 사업부 사이드바 메뉴 구분
- 메뉴 추가
    - [VOC]
    - [예방활동]
    - [DEMO]
    - [교육]
    - [기술지원]
    - [뉴스센터]
    - [애프터마켓]
    - [시스템 관리]
- 메뉴 보완
    - 사용자 인증
        - [CRM 계정생성 (비 서클 사용자) 등록 절차]
        - [비밀번호 초기화] 추가
        - [아이디(이메일) 찾기]추가
    - 예방활동 
        - [개요]추가
        - [BS 활동] 추가


### 0.0.1

- 최초 제정