i18n/zh/docusaurus-plugin-content-docs/version-0.2.3/change-logs.md
---
sidebar_position: 999
---


# Change Logs


## 0.x

### 0.2.3

*2025년 8월 5일*

- 산업용 장비 사업부 설치시운전/프로젝트 상세-개요 상세 내용 수정
- 산업용 장비 사업부 설치시운전/프로젝트 상세-설치 상세 내용 수정

### 0.1.3

*2024년 10월 19일*

- 다국어 번역 Beta

### 0.1.2

*2024년 10월 08일*

- 내용 보완
    - 기준정보 관리
        - [제품 및 부품 데이터 관리](./SMT/tutorial-14-manage-master-data/01-products.md) 내용 보완


### 0.1.1

*2024년 10월 08일*

- 메뉴추가
    - 기준정보 관리
        - [제품 및 부품 데이터 관리](./SMT/tutorial-14-manage-master-data/01-products.md) 메뉴 추가
        - [고객사 데이터 관리](./SMT/tutorial-14-manage-master-data/02-customers.md) 메뉴 추가
        - [사용자 데이터 관리](./SMT/tutorial-14-manage-master-data/03-users.md) 메뉴 추가
        - [서비스 센터 관리](./SMT/tutorial-14-manage-master-data/04-centers.md) 메뉴 추가
        - [자산 관리 관리](./SMT/tutorial-14-manage-master-data/05-assets.md) 메뉴 추가
        - [판매주문 데이터 관리](./SMT/tutorial-14-manage-master-data/06-sales-orders.md) 메뉴 추가


### 0.1.0

*2024년 10월 03일*

- 보안성 강화
    - 토큰 입력 후 매뉴얼을 열람하실 수 있습니다.


### 0.0.11

*2024년 10월 02일*

- 메뉴 보완
    - 애프터마켓
        - [견적 및 실적 관리](./SMT/tutorial-11-aftermarket/01-performance.md) 메뉴 내용 보완

### 0.0.10

*2024년 10월 02일*

- 메뉴 추가
    - 기술지원
        - [Q&A](./SMT/tutorial-09-technical-support/01-qna.md) 메뉴 추가
        - [특수 노즐](./SMT/tutorial-09-technical-support/02-special-nozzle.md) 메뉴 추가
        - [장착정도 인증서](./SMT/tutorial-09-technical-support/03-cpk-certificate.md) 메뉴 추가
- 메뉴 보완
    - 사용자인증
        - [CRM 계정생성(그외사용자)](./SMT/tutorial-01-auth/create-a-acount-non-circle-user.md#일반-사용자-계정-생성-) 페이지 내 일반 사용자 계정 생성 시나리오 부문에 메뉴만 추가해둠

### 0.0.9

*2024년 9월 27일*

- 메뉴 보완
    - 교육
        - [온라인교육과정](./SMT/tutorial-08-lecture/01-online-lecture.md) 절차 추가
        - [오프라인교육과정](./SMT/tutorial-08-lecture/02-offline-lecture.md) 절차 추가
    - DEMO
        - [프로젝트 목록](./SMT/tutorial-07-demo/01-demo-list.md) 안내 추가
        - [프로젝트 생성](./SMT/tutorial-07-demo/02-demo-add.md) 절차 추가
        - [프로젝트 상세](./SMT/tutorial-07-demo/03-demo-detail.md) 절차 추가


### 0.0.8

*2024년 9월 27일*

- 메뉴 추가
    - 업무메뉴관리
- 메뉴 보완
    - 업무메뉴관리
        - [뉴스센터관리](./SMT/tutorial-13-task-management/01-manage-news-center.md) 절차 추가
        - [교육관리](./SMT/tutorial-13-task-management/02-manage-training.md) 절차 추가

### 0.0.7

*2024년 9월 26일*

- 메뉴 보완
    - 뉴스센터
        - [공지사항](./SMT/tutorial-10-news-center/01-notice.md) 절차 추가
        - [MSDS](./SMT/tutorial-10-news-center/03-msds.md) 절차 추가
        - [자료실](./SMT/tutorial-10-news-center/02-archive.md) 절차 추가
    - 예방활동
        - [리트로핏](./SMT/tutorial-06-courtesy-activity/03-retrofit.md) 절차 추가

### 0.0.6

*2024년 9월 25일*

- 메뉴 보완
    - 스토어
        - 자료 보완

### 0.0.5

*2024년 9월 25일*

- 메뉴 보완
    - 스토어
        - [서비스부품 출고 요청](./SMT/tutorial-04-store/stock-request.md) 절차 추가
        - [서비스부품 출고 승인 & 관리](./SMT/tutorial-04-store/stock-manage.md) 절차 추가

### 0.0.4

*2024년 9월 24일*

- 메뉴 보완
    - VOC
        - [VOC 개요](./SMT/tutorial-05-voc/overview-voc.md) 현황판 추가
        - [VOC 생성](./SMT/tutorial-05-voc/create-voc.md) 절차 추가
        - [VOC 처리](./SMT/tutorial-05-voc/handle-voc.md) 절차 추가

### 0.0.3

*2024년 9월 24일*

- 메뉴 보완
    - 스토어
        - [주문서 수정](./SMT/tutorial-04-store/edit-a-store-order-buyer.md) 절차 추가 (작성중)
        - [주문서 작성 - 일반주문(유상PO, 법인용)] 추가
        - [주문서 작성 - 무상출고(본사용)]추가

### 0.0.2

*2024년 9월 23일*

- 매뉴얼 구조 변경
    - 3개 사업부 사이드바 메뉴 구분
- 메뉴 추가
    - [VOC](./SMT/tutorial-05-voc/create-voc.md)
    - [예방활동]
    - [DEMO](./SMT/tutorial-07-demo/01-demo-list.md)
    - [교육](./SMT/tutorial-08-lecture/01-online-lecture.md)
    - [기술지원](./SMT/tutorial-09-technical-support/01-qna.md)
    - [뉴스센터](./SMT/tutorial-10-news-center/01-notice.md)
    - [애프터마켓](./SMT/tutorial-11-aftermarket/01-performance.md)
    - [시스템 관리](./SMT/tutorial-12-system-management/01-model-manage.md)
- 메뉴 보완
    - 사용자 인증
        - [CRM 계정생성 (비 서클 사용자) 등록 절차](./SMT/tutorial-01-auth/create-a-acount-non-circle-user.md) (95%)
        - [비밀번호 초기화](./SMT/tutorial-01-auth/initialize-password.md) 추가 (80%)
        - [아이디(이메일) 찾기](./SMT/tutorial-01-auth/find-email.md) 추가
    - 예방활동 
        - [개요] 추가
        - [BS 활동](./SMT/tutorial-06-courtesy-activity/02-bs.md) 추가


### 0.0.1

- 최초 제정